Correcting strange CSS bug with menu overlap
When menu overlapped <pre> within a <figure>, it disappeared, unless this was removed

--- a/_sass/pygments.scss
+++ b/_sass/pygments.scss
@@ -10,7 +10,6 @@
 	margin-bottom: 1.5em;
 	@include rounded(4px);
 	pre {
-		position: relative;
 		margin: 0;
 		padding: 1em;
 	}
